<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="16dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/tvKandivali"
                android:padding="12dp"
                android:background="@drawable/kandivali"
                android:textSize="20sp"
                android:layout_marginTop="6dp"
                android:textStyle="bold"
                android:textColor="@color/colorTextImage"
                android:text="@string/kandivali"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvDadar"
                android:padding="12dp"
                android:background="@drawable/dadar"
                android:textSize="20sp"
                android:layout_marginTop="6dp"
                android:textStyle="bold"
                android:textColor="@color/colorTextImage"
                android:text="@string/dadar"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvNestle"
                android:padding="12dp"
                android:background="@drawable/nestle"
                android:textSize="20sp"
                android:layout_marginTop="6dp"
                android:textStyle="bold"
                android:textColor="@color/colorTextImage"
                android:text="@string/nestle"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvSantacruz"
                android:padding="12dp"
                android:background="@drawable/santacruz"
                android:textSize="20sp"
                android:layout_marginTop="6dp"
                android:textStyle="bold"
                android:textColor="@color/colorTextImage"
                android:text="@string/santacruz"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvBkc"
                android:padding="12dp"
                android:background="@drawable/bkc"
                android:textSize="20sp"
                android:layout_marginTop="6dp"
                android:textStyle="bold"
                android:textColor="@color/colorTextImage"
                android:text="@string/bkc"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvGhatkopar"
                android:padding="12dp"
                android:background="@drawable/ghatkopar"
                android:textSize="20sp"
                android:layout_marginTop="6dp"
                android:textStyle="bold"
                android:textColor="@color/colorTextImage"
                android:text="@string/ghatkopar"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </android.support.v7.widget.CardView>


